Add route to post report about a quiz
